[NEW] Shimmer on list item and dog zoom

--- a/app/src/main/res/layout/dogs_zoom.xml
+++ b/app/src/main/res/layout/dogs_zoom.xml
@@ -4,6 +4,24 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/dialog_zoom_shimmer_view_container"
+        android:layout_width="400dp"
+        android:layout_height="400dp">
+
+        <ImageView
+            android:id="@+id/dialog_shimmer_placeholder_imageview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/dialog_shimmer_placeholder_imageview_description"
+            android:src="@android:color/darker_gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <ImageView
         android:id="@+id/dialog_list_dogs_item_imageview"
         android:layout_width="400dp"
