--- a/app/src/main/res/layout/dogs_list_item.xml
+++ b/app/src/main/res/layout/dogs_list_item.xml
@@ -1,13 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="180dp"
-    android:layout_height="180dp">
+    android:layout_width="155dp"
+    android:layout_height="155dp">
+
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/dogs_list_shimmer_view_container"
+        android:layout_width="155dp"
+        android:layout_height="155dp">
+
+        <ImageView
+            android:id="@+id/dogs_list_shimmer_list_placeholder_imageview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/dogs_list_shimmer_placeholder_imageview_description"
+            android:src="@android:color/darker_gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
     <ImageView
-        android:id="@+id/list_dogs_item_imageview"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:id="@+id/dogs_list_item_imageview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:contentDescription="@string/list_dogs_item_imageview"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
