--- a/app/src/main/res/layout/dogs_list_item.xml
+++ b/app/src/main/res/layout/dogs_list_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="155dp"
-    android:layout_height="155dp">
+    android:layout_width="@dimen/dog_list_item_width"
+    android:layout_height="@dimen/dog_list_item_height">
 
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/dogs_list_shimmer_view_container"
-        android:layout_width="155dp"
-        android:layout_height="155dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/dogs_list_shimmer_list_placeholder_imageview"
