--- a/app/src/main/res/layout/dogs_zoom.xml
+++ b/app/src/main/res/layout/dogs_zoom.xml
@@ -7,8 +7,8 @@
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/dialog_zoom_shimmer_view_container"
-        android:layout_width="400dp"
-        android:layout_height="400dp">
+        android:layout_width="@dimen/dog_zoom_width"
+        android:layout_height="@dimen/dog_zoom_height">
 
         <ImageView
             android:id="@+id/dialog_shimmer_placeholder_imageview"
@@ -24,8 +24,8 @@
 
     <ImageView
         android:id="@+id/dialog_dog_imageview"
-        android:layout_width="400dp"
-        android:layout_height="400dp"
+        android:layout_width="@dimen/dog_zoom_width"
+        android:layout_height="@dimen/dog_zoom_height"
         android:contentDescription="@string/list_dogs_item_imageview"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
