--- a/app/src/main/res/layout/dogs_list_item.xml
+++ b/app/src/main/res/layout/dogs_list_item.xml
@@ -7,8 +7,8 @@
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/dogs_list_shimmer_view_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/dogs_list_shimmer_list_placeholder_imageview"
